--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-feather": "^2.0.10",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.1"
   }
 }
