--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.53.2",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
   },
